# llm-wind-turbine-status-log-review

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: data_test.ipynb
examples/detections/: catalog.csv
src/: cli.py  constants.py  getprojectroot.py  helper.py  llm.py  output  parser.py  prompt.py  reviewer.py  schema.py
src/results/index/: idx.jsonl
src/results/output/: out.jsonl
tests/: test_helper.py
