[project]
name = "llm-wind-turbine-status-log-review"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shin.H.",email = "-"},
]
dependencies = ["pandas>=3.0.3", "numpy>=2.4.6", "tqdm>=4.68.2"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ipykernel>=7.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]