[project]
name = "llm-wind-turbine-status-log-review"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shin.H.",email = "-"},
]
dependencies = ["pandas>=3.0.3", "numpy>=2.4.6", "tqdm>=4.68.2", "requests>=2.34.2", "python-dotenv>=1.2.2", "openai>=2.43.0", "anthropic>=0.111.0", "google-genai>=2.8.0", "pydantic>=2.13.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ipykernel>=7.3.0",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "serial: run specific tests sequentially",
    "parallel: run specific tests parallelly",
]

[tool.pdm.scripts]
test_serial = "pytest -n 0 -m serial --color=yes -v"
test_parallel = "pytest -n auto -m parallel --color=yes -v"
test_all = { composite = ["test_parallel", "test_serial"]}

[tool.pdm]
distribution = false

[tool.pdm.build]
package-dir = "src"

